se agrego el endpoint de new a swagger
