# src/routes/new.ts
@@ -9,7 +9,7 @@ const upload = multer({ dest: './uploads/' })
 const router = Router();
 router.get('/', NewController.getAll);
 router.get('/:id', NewController.getById);
-router.post('/', validateNew, [/*checkJwt, checkRole(['admin']),*/upload.single('image')], NewController.createNew);
+router.post('/', validateNew, [/*checkJwt, checkRole(['admin']),upload.single('image')*/], NewController.createNew);
 router.put('/:id', validateNew, [/*checkJwt, checkRole(['admin'])*/], NewController.updateNew);
 router.patch('/:id', validateNew, [/*checkJwt, checkRole(['admin'])*/], NewController.updateNew);
 router.delete('/:id', [/*checkJwt, checkRole(['admin'])*/], NewController.deleteNew);
